# modme_clone

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  TODO  cron.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: codeql.yml  django.yml  flake8.yml  main.yml  workflow.yml
apps/: __init__.py  admin.py  apps.py  models.py  serializer.py  serializers.py  urls.py  views.py
apps/crm/: apps.py  serializers.py  views.py
apps/crm/management/commands/: create.py
apps/groups/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/groups/management/commands/: create.py  create_course.py  (+4 more)
apps/groups/migrations/: 0001_initial.py  0002_initial.py  0003_alter_group_teacher.py  0003_remove_course_group.py
apps/groups/serializers/: __init__.py  branch.py  course.py  group.py  holiday.py  room.py  serializers.py
apps/groups/tests/: test_model.py  test_serializer.py  test_view.py
apps/groups/views/: __init__.py  groups.py  views.py
apps/migrations/: 0001_initial.py  0002_course_room_alter_branch_options_alter_role_options_and_more.py  0002_course_room_weekend_alter_branch_options_and_more.py  0002_initial.py  0003_weekend_remove_course_id_course_created_at_and_more.py
apps/shared/: models.py  pagination.py  permissions.py  serializers.py  tests.py
apps/shared/utils/: export_excel.py
apps/users/: admin.py  documents.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/users/fixtures/: role.yaml
apps/users/migrations/: 0001_initial.py  0002_remove_user_branch.py  0002_remove_user_groups_user_roles_role.py  0002_user_confirm_password_alter_user_password.py  0002_user_group.py  0003_remove_user_roles_user_groups.py  0004_delete_role.py
apps/users/serializers/: __init__.py  archive.py  lead.py  staff.py  student.py  user.py
apps/users/tests/: test_exportexcel.py  test_model.py  test_modelviewset.py  test_serializers.py  test_user.py  test_user_serializer.py  test_user_view.py  test_views.py
core/: .env.example  settings.py  urls.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
media/: test
modme_clone/: asgi.py  settings.py  wsgi.py
users/: managers.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_alter_user_options_user_date_joined_user_email_and_more.py  0004_remove_user_username.py  0005_rename_phone_number_user_phone.py  0006_alter_user_options_remove_user_date_joined_and_more.py  0007_alter_user_options_user_date_joined_user_email_and_more.py  0008_remove_user_email_remove_user_username.py
(+30 files in other folders)
