[tool.poetry]
name = "modme-clone"
version = "0.1.0"
description = ""
authors = ["Ahror <uzkod136@mail.ru>"]
readme = "README.md"
packages = [{ include = "core" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
psycopg2-binary = "^2.9.5"
django-environ = "^0.9.0"
drf-yasg = { extras = ["validation"], version = "^1.21.4" }
sentry-sdk = "^1.14.0"
requests = "^2.28.2"
pendulum = "^2.1.2"
pillow = "^9.4.0"
djangorestframework-simplejwt = "^5.2.2"
django-filter = "^22.1"
pytest-django = "^4.5.2"
timedelta = "^2020.12.3"
django-jazzmin = "^2.6.0"
faker = "^16.6.1"
model-bakery = "^1.10.1"
django-ckeditor = "^6.5.1"
beautifulsoup4 = "^4.11.2"
xlwt = "^1.3.0"
pandas = "^1.5.3"
coverage = "^7.1.0"
pytest = "^7.2.1"
flake8 = "^6.0.0"
setuptools = "^67.3.1"
update = "^0.0.1"
pytest-cov = "^4.0.0"
xlrd = "^2.0.1"
openpyxl = "^3.1.1"
django-elasticsearch-dsl-drf = "^0.22.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
